# falkordb-bulk-loader

./: .flake8  README.md  pyproject.toml
.github/workflows/: integration.yml  publish-pypi.yml  release-drafter.yml
falkordb_bulk_loader/: bulk_insert.py  bulk_update.py  config.py  connection.py  entity_file.py  label.py  mtx_insert.py  query_buffer.py  relation_type.py  sources.py  stacktrace.py
test/: test_bulk_loader.py  test_bulk_update.py  test_config.py  test_connection.py  test_entity_file.py  test_entity_file_schema_header.py  test_label.py  test_mtx_insert.py  test_relation_type.py  test_sources.py  test_stacktrace.py
